the second test

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 this is the first test: change file in github, then sync to local.
+this is the second test: change local file and commit to remote.
