change 3rd to third

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 this is the first test: change file in github, then sync to local.
 this is the 2nd test: change local file and commit to remote.
-this is the 3rd test: create a branch and change file content, then checkin to remote. if i can see 2 version?
+this is the third test: create a branch and change file content, then checkin to remote. if i can see 2 version?
